--- a/PopulateDateRange.ipynb
+++ b/PopulateDateRange.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "0771297f",
+   "id": "3f6a0c34",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "a1846620",
+   "id": "175364ac",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,13 +46,16 @@
     "twilio_phone = os.getenv('TWILIO_PHONE')\n",
     "WEATHER_API = os.getenv('WEATHER_API')\n",
     "\n",
+    "my_key= os.getenv('AWS_KEY') \n",
+    "my_secret= os.getenv('AWS_SECRET')\n",
+    "\n",
     "query = 'Poza Rica'\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "b5dd563f",
+   "id": "87fd1a00",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +67,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "b1ca3c74",
+   "id": "822ab6d6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,13 +91,12 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "6534da71",
+   "id": "de69a92f",
    "metadata": {},
    "outputs": [],
    "source": [
     "bucket_name = 'weather-innova-proto'\n",
-    "my_key= 'AKIA2GY7CI3JQI2J7OC7' \n",
-    "my_secret= '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' \n",
+    "\n",
     "\n",
     "def UploadToS3(query,dateQuery,bucket_name,my_key,my_secret,data):\n",
     "    filename = query +\"-\"+dateQuery\n",
@@ -115,7 +117,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "77f3c54d",
+   "id": "c6ae4611",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,7 +136,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "37a19ca6",
+   "id": "225c95d2",
    "metadata": {},
    "outputs": [
     {
@@ -176,7 +178,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1b845fac",
+   "id": "1c9cfc6e",
    "metadata": {},
    "outputs": [],
    "source": []
