--- a/getS3Data.ipynb
+++ b/getS3Data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 41,
    "id": "a91e63cf",
    "metadata": {},
    "outputs": [],
@@ -20,19 +20,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 42,
    "id": "20e9a157",
    "metadata": {},
    "outputs": [],
    "source": [
     "bucket_name = 'weather-innova-proto'\n",
-    "my_key= 'AKIA2GY7CI3JQI2J7OC7' \n",
-    "my_secret= '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' "
+    "from dotenv import load_dotenv\n",
+    "\n",
+    "load_dotenv(dotenv_path=\"Config.env\")\n",
+    "my_key= os.getenv('AWS_KEY') \n",
+    "my_secret= os.getenv('AWS_SECRET')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 43,
    "id": "82babbba",
    "metadata": {},
    "outputs": [],
@@ -44,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 44,
    "id": "6442a1b4",
    "metadata": {},
    "outputs": [],
@@ -64,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 45,
    "id": "765bd440",
    "metadata": {},
    "outputs": [
@@ -100,7 +103,7 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>2023-08-01</td>\n",
+       "      <td>2023-07-30</td>\n",
        "      <td>0</td>\n",
        "      <td>Patchy rain possible</td>\n",
        "      <td>24.7</td>\n",
@@ -109,37 +112,37 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>2023-08-01</td>\n",
+       "      <td>2023-07-30</td>\n",
        "      <td>1</td>\n",
-       "      <td>Partly cloudy</td>\n",
-       "      <td>25.4</td>\n",
+       "      <td>Thundery outbreaks possible</td>\n",
+       "      <td>25.5</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>2023-08-01</td>\n",
+       "      <td>2023-07-30</td>\n",
        "      <td>2</td>\n",
-       "      <td>Clear</td>\n",
-       "      <td>24.3</td>\n",
+       "      <td>Patchy rain possible</td>\n",
+       "      <td>24.2</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>2023-08-01</td>\n",
+       "      <td>2023-07-30</td>\n",
        "      <td>3</td>\n",
-       "      <td>Clear</td>\n",
-       "      <td>24.1</td>\n",
+       "      <td>Partly cloudy</td>\n",
+       "      <td>23.9</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>2023-08-01</td>\n",
+       "      <td>2023-07-30</td>\n",
        "      <td>4</td>\n",
-       "      <td>Mist</td>\n",
-       "      <td>23.8</td>\n",
+       "      <td>Partly cloudy</td>\n",
+       "      <td>24.1</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
@@ -153,7 +156,7 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>355</th>\n",
+       "      <th>379</th>\n",
        "      <td>2023-08-15</td>\n",
        "      <td>19</td>\n",
        "      <td>Clear</td>\n",
@@ -162,7 +165,7 @@
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>356</th>\n",
+       "      <th>380</th>\n",
        "      <td>2023-08-15</td>\n",
        "      <td>20</td>\n",
        "      <td>Patchy rain possible</td>\n",
@@ -171,7 +174,7 @@
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>357</th>\n",
+       "      <th>381</th>\n",
        "      <td>2023-08-15</td>\n",
        "      <td>21</td>\n",
        "      <td>Patchy rain possible</td>\n",
@@ -180,7 +183,7 @@
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>358</th>\n",
+       "      <th>382</th>\n",
        "      <td>2023-08-15</td>\n",
        "      <td>22</td>\n",
        "      <td>Partly cloudy</td>\n",
@@ -189,7 +192,7 @@
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>359</th>\n",
+       "      <th>383</th>\n",
        "      <td>2023-08-15</td>\n",
        "      <td>23</td>\n",
        "      <td>Moderate rain at times</td>\n",
@@ -199,27 +202,40 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>360 rows × 6 columns</p>\n",
+       "<p>384 rows × 6 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "          fecha hour               condition  temp_C will_rain chance_of_rain\n",
-       "0    2023-08-01    0    Patchy rain possible    24.7         0              0\n",
-       "1    2023-08-01    1           Partly cloudy    25.4         0              0\n",
-       "2    2023-08-01    2                   Clear    24.3         0              0\n",
-       "3    2023-08-01    3                   Clear    24.1         0              0\n",
-       "4    2023-08-01    4                    Mist    23.8         0              0\n",
-       "..          ...  ...                     ...     ...       ...            ...\n",
-       "355  2023-08-15   19                   Clear    31.1         0              0\n",
-       "356  2023-08-15   20    Patchy rain possible    26.1         0              0\n",
-       "357  2023-08-15   21    Patchy rain possible    25.0         0              0\n",
-       "358  2023-08-15   22           Partly cloudy    26.4         0              0\n",
-       "359  2023-08-15   23  Moderate rain at times    24.6         0              0\n",
+       "          fecha hour                    condition  temp_C will_rain  \\\n",
+       "0    2023-07-30    0         Patchy rain possible    24.7         0   \n",
+       "1    2023-07-30    1  Thundery outbreaks possible    25.5         0   \n",
+       "2    2023-07-30    2         Patchy rain possible    24.2         0   \n",
+       "3    2023-07-30    3                Partly cloudy    23.9         0   \n",
+       "4    2023-07-30    4                Partly cloudy    24.1         0   \n",
+       "..          ...  ...                          ...     ...       ...   \n",
+       "379  2023-08-15   19                        Clear    31.1         0   \n",
+       "380  2023-08-15   20         Patchy rain possible    26.1         0   \n",
+       "381  2023-08-15   21         Patchy rain possible    25.0         0   \n",
+       "382  2023-08-15   22                Partly cloudy    26.4         0   \n",
+       "383  2023-08-15   23       Moderate rain at times    24.6         0   \n",
        "\n",
-       "[360 rows x 6 columns]"
+       "    chance_of_rain  \n",
+       "0                0  \n",
+       "1                0  \n",
+       "2                0  \n",
+       "3                0  \n",
+       "4                0  \n",
+       "..             ...  \n",
+       "379              0  \n",
+       "380              0  \n",
+       "381              0  \n",
+       "382              0  \n",
+       "383              0  \n",
+       "\n",
+       "[384 rows x 6 columns]"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
